--- a/index.html
+++ b/index.html
@@ -12,31 +12,27 @@
 </head>
 <body>
     <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#home">Noble Teachers Forum</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#forum">Teachers</a>
-                </li>
-                <!-- New About Developer Link -->
-                <li class="nav-item">
-                    <a class="nav-link" href="https://hasaf.tiiny.site" target="_blank">About Developer</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#home">Noble Teachers Forum</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#forum">Teachers</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
     <!-- Hero Section -->
     <header id="home" class="hero">
@@ -65,26 +61,26 @@
     </section>
 
     <!-- About Us Section -->
-<section id="about" class="about-us container">
-    <h2>About Us</h2>
-    <p>
-        This website is created by alumni of AMU, IITs, NITs, and especially AMU ABK High School.
-        Our mission is to honor the noble teachers shaping the future of students globally.
-    </p>
-    <h3>Core Development Team</h3>
-    <ul>
-        <li><strong>Arif Qureshi</strong> - Project Lead</li>
-        <li><strong>Sana Malik</strong> - UI/UX Designer</li>
-        <li><strong>Rahul Sharma</strong> - Backend Developer</li>
-        <li><strong>Fatima Siddiqui</strong> - Content Strategist</li>
-        <li><strong>Ali Khan</strong> - Frontend Developer</li>
-        <li><strong>Priya Verma</strong> - Quality Analyst</li>
-        <li><strong>Ravi Gupta</strong> - Data Analyst</li>
-        <li><strong>Nazia Parveen</strong> - Research Consultant</li>
-        <li><strong>Imran Haider</strong> - Marketing Expert</li>
-        <li><strong>Hashir Afaque</strong> - Main Project Head, Core Developer</li>
-    </ul>
-</section>
+    <section id="about" class="about-us container">
+        <h2>About Us</h2>
+        <p>
+            This website is created by alumni of AMU, IITs, NITs, and especially AMU ABK High School.
+            Our mission is to honor the noble teachers shaping the future of students globally.
+        </p>
+        <h3>Core Development Team</h3>
+        <ul>
+            <li><strong>Arif Qureshi</strong> - Project Lead</li>
+            <li><strong>Sana Malik</strong> - UI/UX Designer</li>
+            <li><strong>Rahul Sharma</strong> - Backend Developer</li>
+            <li><strong>Fatima Siddiqui</strong> - Content Strategist</li>
+            <li><strong>Ali Khan</strong> - Frontend Developer</li>
+            <li><strong>Priya Verma</strong> - Quality Analyst</li>
+            <li><strong>Ravi Gupta</strong> - Data Analyst</li>
+            <li><strong>Nazia Parveen</strong> - Research Consultant</li>
+            <li><strong>Imran Haider</strong> - Marketing Expert</li>
+            <li><strong>Hashir Afaque</strong> - Core Junior Developer</li>
+        </ul>
+    </section>
 
     <!-- Footer -->
     <footer class="text-center bg-dark text-white py-3">
